fix codeStyle L27 websocket